@@ -175,12 +175,14 @@ int  m_vhost(aClient *cptr, aClient *sptr, int parc, char *parv[])
 		if (vhost->virtuser) {
 			strcpy(olduser, sptr->user->username);
 			strlcpy(sptr->user->username, vhost->virtuser, USERLEN);
+			sendto_serv_butone_token(cptr, sptr->name, MSG_SETIDENT, TOK_SETIDENT,
+						 "%s", sptr->user->username);
 		}
 		sptr->umodes |= UMODE_HIDE;
 		sptr->umodes |= UMODE_SETHOST;
 		sendto_serv_butone_token(cptr, sptr->name,
 			MSG_SETHOST, TOK_SETHOST,
-			"%s", vhost->virthost);
+			"%s", sptr->user->virthost);
 		sendto_one(sptr, ":%s MODE %s :+tx",
 		    sptr->name, sptr->name);
 		if (vhost->swhois) {
