@@ -253,3 +253,5 @@
 - Fixed ban bug: halfops were also prevented from doing nickchanges if banned, plus..
   +b ~n:*!*@* also made nickchanges impossible for voiced(&halfop'ed) people (so like half
   of the purpose of it was defeated @$#&@#). Reported by Rocko.
+- Fixed a bug where an ident in a vhost {} was never sent out to other servers and added
+  user@host support for set::hosts (#0001834) reported/suggested by bleepy.
